classDiagram
    class Webservice {
        + getUserByCredentials(String username, String password)
        + getChildByUsername(String username)
        + getTapByChild(int child_id, int tap_id)
        + getAllTaps(int child_id): Tap[]
    }

    class DAOUser {
        + User[] Users
        + getUserByCredentials(String username, String password)
    }

    class User {
        + String username
        + String email
        + String password
    }

    class DAOChild {
        + Child[] Children
        + getChildByUsername(String username)
        + getTapById(int child_id, int tap_id)
        + getAllTaps(int child_id)
    }

    class Child {
        + int child_id
        + String child_name
        + String state
        + Tap last_tap
    }

    class Tap {
        + int id
        + int sleep_total
        + int time_slept
        + int time_remaining
        + Date start_date
        + Date end_date
    }

    Webservice -- DAOUser
    DAOUser -- User
    Webservice -- DAOChild
    DAOChild -- Child 
    DAOChild -- Tap